<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/container"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/black_trans"
              android:gravity="bottom"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/ivImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/llBottom"
            />

        <LinearLayout
            android:id="@+id/llBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:id="@+id/tvSave"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="30px"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/choose_an_action_save"
                android:textColor="@color/sky_btn_back"
                android:textSize="34px"
                android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCrop"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:padding="30px"
                    android:gravity="center"
                    android:text="@string/choose_an_action_crop"
                    android:textColor="@color/sky_btn_back"
                    android:textSize="34px"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/white" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20px">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/ivCamera"
                        android:layout_width="100px"
                        android:layout_height="100px"
                        android:src="@drawable/camera_white"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/ivGallery"
                        android:layout_width="100px"
                        android:layout_height="100px"
                        android:src="@drawable/gallery_white"/>

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/white" />

            <android.support.v7.widget.RecyclerView
                android:visibility="gone"
                android:id="@+id/rvSortItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="30px"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="34px" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>