<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/llAllview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userrimg"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/human" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/userrimg"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:id="@+id/linearLayout">

            <TextView
                android:id="@+id/txtname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:fontFamily="sans-serif"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txtdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                android:fontFamily="sans-serif"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size14" />
        </LinearLayout>

        <TextView
            android:id="@+id/btn_invitefriendlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:background="@drawable/box1"
            android:gravity="center"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:text="Invite friend"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_alignBottom="@+id/linearLayout"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txtstatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="@dimen/margin_10"
        android:fontFamily="sans-serif"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size14" />

    <ImageView
        android:id="@+id/imgstas"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@color/colorGray"
        android:scaleType="centerCrop"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/llvideioview"
        android:layout_width="match_parent"
        android:background="#000000"
        android:visibility="gone"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/ivThumbnail"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/black"
            android:scaleType="centerCrop"/>
        <VideoView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:background="#000000"
            android:visibility="gone"
            android:id="@+id/videoview"/>
        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/progrss"
            android:visibility="gone"
            android:layout_centerInParent="true"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/play"
            android:layout_centerInParent="true"
            android:id="@+id/btnconti"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/pause"
                android:visibility="gone"
                android:id="@+id/btnstop" />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/btnplay"
                android:visibility="gone"
                android:src="@drawable/play"
                />
        </LinearLayout>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_fullscreen_black_24dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:id="@+id/btnFullScreen"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/fb_item_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:minHeight="40dp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/fb_Block"
            style="@style/Facebook.Button.Feed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="gone"
            android:text="@string/fb_button_like" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/fb_Reportcontent"
            style="@style/Facebook.Button.Feed"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/fb_button_comment" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/btnShareVideos"
            style="@style/Facebook.Button.Feed"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:text="@string/fb_button_share" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="@dimen/margin_5"
        android:background="@drawable/toolbar_shadow"></View>
</LinearLayout>
